[package]
name = "read-aloud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "1.0.0"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[build-dependencies]
cbindgen = "0.26.0"
current_platform = "0.2.0"
